--- a/MyApplication/app/build.gradle
+++ b/MyApplication/app/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'com.android.application'
-
 android {
     compileSdkVersion 26
     buildToolsVersion "26.0.2"
@@ -38,4 +37,7 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:26.+'
     compile 'com.hjm:BottomTabBar:1.1.1'
     compile 'com.youth.banner:banner:1.4.9'
+    compile 'com.github.leifzhang:IjkLib:0.4.3'
+    compile 'com.github.bumptech.glide:glide:4.0.0'
+    compile 'com.facebook.fresco:fresco:0.12.0'
 }
