--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.bj.myapplication">
     <uses-permission android:name="android.permission.INTERNET" />
     <application
+        android:name=".net.Myapp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
