--- a/MyApplication/app/build.gradle
+++ b/MyApplication/app/build.gradle
@@ -40,4 +40,5 @@ dependencies {
     compile 'com.github.leifzhang:IjkLib:0.4.3'
     compile 'com.github.bumptech.glide:glide:4.0.0'
     compile 'com.facebook.fresco:fresco:0.12.0'
+    compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
 }
