--- a/MyApplication/app/build.gradle
+++ b/MyApplication/app/build.gradle
@@ -41,4 +41,5 @@ dependencies {
     compile 'com.facebook.fresco:fresco:0.12.0'
     compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
     testCompile 'junit:junit:4.12'
+    compile 'com.github.mcxtzhang:ZLayoutManager:V1.1.0'
 }
