--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         </activity>
         <activity android:name=".View.Main2Activity" />
         <activity android:name=".View.SetActivity"></activity>
+        <activity android:name=".View.SearchActivity"></activity>
     </application>
 
 </manifest>
